2.4.0
---------------

- macros.pt: Add autofocus attribute to search field

- fix issue244: server status info

  - added support for status message plugin hook ``devpiweb_get_status_info``
  - macros.pt: added macros ``status`` (below search) and ``statusbadge`` (in
    footer)
  - added status.pt: shows server status information

- toxresults.pt: fix missing closing ``div`` tag.


2.3.0
---------------

- toxresults.pt: use just one line for result status indicator

- adapt devpi-web to devpi-server-2.2.0 hash-spec changes

- version.pt: moved hash to title attribute of table cell. With the upcoming
  change to sha256 it's too long and it's available from the link url as well.

- use renamed devpiserver_run_commands hook 

- fix issue233: projects on root/pypi with no releases lead to a traceback


2.2.3
---------------

- fix issue207: added documentation url for latest stable release of a package.


2.2.2
---------------

- fix issue184: better height calculation of documentation iframe.


2.2.1
---------------

- require devpi-server>=2.1.2

- fix issue175: use normalized name of projects, so redirects from unnormalized
  names works.  NOTE that if you had issues with documentation uploads
  not appearing because of normalization issues ("-" or "_" appearing 
  in the name for example) you need to re-upload the docs or 
  do a full export/import cycle.  

- fix view when tox results can not be parsed. 

- version.pt: removed "code" tag around overwrite count.

- macros.pt: added "footer" tag around the whole footer part.

- version.pt: moved file type, python version and size info from their own
  columns into the file column.

- version.pt: moved history column from before the tox results column to behind
  the tox results.

- version.pt: removed "last modified" from history column

- version.pt: removed timestamp from "replaced" action in history column

- version.pt: add link to PyPI page if applicable.
