@@ -3,11 +3,14 @@
 
 - macros.pt: Add autofocus attribute to search field
 
+- macros.pt and style.css: Moved "How to search?" to the right of the search
+  button and adjusted width of search field accordingly.
+
 - fix issue244: server status info
 
   - added support for status message plugin hook ``devpiweb_get_status_info``
-  - macros.pt: added macros ``status`` (below search) and ``statusbadge`` (in
-    footer)
+  - macros.pt: added macros ``status`` and ``statusbadge`` and placed them
+    below the search field.
   - added status.pt: shows server status information
 
 - toxresults.pt: fix missing closing ``div`` tag.
